# fuse

./: .buildinfo  Makefile  README.md  cells.html  conftest.py  dof.html  examples.html  genindex.html  groups.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  serialisation.html  spaces.html  test_loopy.c  test_loopy_callable.py  triples.html
.github/workflows/: deploy_docs.yml  docs.yml  lint.yml  test.yml
docs/: Makefile
docs/source/: conf.py  index.rst
fuse/: __init__.py  basix_interface.py  cells.py  geometry.py  tensor_products.py  triples.py
fuse/spaces/: element_sobolev_spaces.py  polynomial_spaces.py
fuse_basix/: __init__.py  basix_interface.py
test/: bfs.py  plots.py  tempscript.py  test_2d_examples_docs.py  test_3d_examples_docs.py  test_cells.py  test_convert_to_basix.py  test_convert_to_fiat.py  test_polynomial_space.py  test_tensor_prod.py
